--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -11,19 +11,6 @@
   top: 0;
   z-index: 100;
 }
-.navbar__colorChange {
-  background: #202020;
-  color: white;
-  height: 80px;
-  display: flex;
-  justify-content: center;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 1.2rem;
-  position: sticky;
-  top: 0;
-  z-index: 100;
-}
 
 .navbar-container {
   display: flex;
@@ -179,7 +166,9 @@
 
   .nav-links-mobile {
     display: block;
-    text-align: center;
+    align-items: center;
+    align-self: center;
+    align-content: center;
     margin: 2rem auto;
     border-radius: 4px;
     width: 80%;
@@ -197,4 +186,28 @@
     color: white;
     transition: 250ms;
   }
+}
+.header__option {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.header__optionlineOne {
+  font-size: 10px;
+}
+
+.header__optionlineTwo {
+  font-size: 13px;
+  font-weight: 800;
+}
+.header__optionBasket {
+  display: flex;
+  align-items: center;
+}
+
+.header__basketCount {
+  margin-left: 10px;
+  margin-right: 10px;
 }
