--- a/src/Components/SignUp/Signup.css
+++ b/src/Components/SignUp/Signup.css
@@ -23,13 +23,13 @@
 
 .login__container > h1 {
   font-weight: 500;
-  color: beige;
+  color: black;
   align-self: center;
   margin-bottom: 20px;
 }
-.login__container > form > h5 {
+.login__container > form > h4 {
   margin-bottom: 5px;
-  color: beige;
+  color: black;
 }
 
 .login__container > form > input {
@@ -42,7 +42,7 @@
 .login__container > p {
   margin-top: 15px;
   font-size: 12px;
-  color: beige;
+  color: black;
   margin-bottom: 10px;
 }
 
